# options-analyzer

./: .replit  README.md  analysis.py  data_fetcher.py  main.py  model.pkl  model_metadata.json  pyproject.toml  show_logs.py  strategist.py  utils.py
.github/workflows/: static.yml
.streamlit/: config.toml
attached_assets/: Pasted-DEPLOYING-A-SMARTER-OPTIONS-ANALYSIS-APP-ON-REPLIT-This-updated-guide-refines-the-original-walkthro-1743904132956.txt
cache/: .gitkeep  AAPL_fundamentals.json  AAPL_history_1y_1d.parquet  AAPL_history_5y_1d.parquet  AAPL_options_chain.json  CCG_fundamentals.json  CCG_history_1y_1d.parquet  CGC_fundamentals.json  CGC_history_1y_1d.parquet  CGC_options_chain.json  SPY_history_5y_1d.parquet  TLRY_fundamentals.json  TLRY_history_1y_1d.parquet  TLRY_options_chain.json  TSLA_fundamentals.json  TSLA_history_1y_1d.parquet  TSLA_history_5y_1d.parquet  TSLA_options_chain.json
static_site/: .gitignore  README.md  analysis.py  data_fetcher.py  data_fetcher_browser.py  index.html  main_stlite.py  requirements.txt  strategist.py  test_locally.py  utils.py
static_site/api/: index.py
